Finally fixed collision

--- a/src/resources/settings.properties
+++ b/src/resources/settings.properties
@@ -1,3 +1,7 @@
+player.initial-x = 300
+player.initial-y = 400
+player.width = 50
+player.height = 100
 player.velocity = 400
 road.width = 400
 road.height = 500
@@ -11,5 +15,6 @@ car.height = 100
 car.min-velocity = 75
 car.max-velocity = 125
 road-traffic.max-offset = 300
-road-traffic.min-generation-interval = 800
-road-traffic.max-generation-interval = 1600
+road-traffic.min-generation-interval = 1300
+road-traffic.max-generation-interval = 2000
+life.chance = 0.01
