Updated scoring system

--- a/src/resources/settings.properties
+++ b/src/resources/settings.properties
@@ -10,6 +10,7 @@ player-bounds.height = 200
 road.lane-count = 4
 player.starting-lives = 3
 score.increment-per-time = 1
+score.increment-per-car = 1
 car.width = 50
 car.height = 100
 car.min-velocity = 75
