--- a/src/resources/settings.properties
+++ b/src/resources/settings.properties
@@ -19,3 +19,7 @@ road-traffic.max-offset = 300
 road-traffic.min-generation-interval = 1300
 road-traffic.max-generation-interval = 2000
 life.chance = 0.05
+
+view.tittle = Highway racer ver. 0.0
+view.width = 450
+view.height = 550
