Little changed processing of key presses and a bit more fixes

--- a/src/resources/settings.properties
+++ b/src/resources/settings.properties
@@ -9,7 +9,6 @@ road.lane-width = 100
 player-bounds.height = 200
 road.lane-count = 4
 player.starting-lives = 3
-score.increment-per-time = 1
 score.increment-per-car = 1
 car.width = 50
 car.height = 100
@@ -23,3 +22,12 @@ life.chance = 0.05
 view.tittle = Highway racer ver. 0.0
 view.width = 450
 view.height = 550
+view.gamefield.color = 0x308B04
+
+image.player = src/resources/image/player.png
+image.ambulance = src/resources/image/Ambulance.png
+image.car1 =  src/resources/image/Car.png
+image.car2 = src/resources/image/Mini_truck.png
+image.car3 = src/resources/image/Mini_van.png
+image.car4 = src/resources/image/taxi.png
+image.car5 = src/resources/image/Audi.png
